// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCardV2 Snapshots matches snapshot - basic card 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-m6xlmc"
      data-backpack-ds-component="CardV2.Header"
    >
      Card Title
    </div>
    <div
      class="css-rh38e6"
      data-backpack-ds-component="CardV2.Body"
    >
      Card content goes here
    </div>
    <div
      class="css-11j4h56"
      data-backpack-ds-component="CardV2.Footer"
    >
      Card footer
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - complex layout with all sections 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-m6xlmc"
      data-backpack-ds-component="CardV2.Header"
    >
      Product
    </div>
    <div
      class="css-1poe0o9"
      data-backpack-ds-component="CardV2.Body"
    >
      <div
        class="css-ndknme"
        data-backpack-ds-component="CardV2.Primary"
      >
        <img
          alt="Product"
          src="product.jpg"
        />
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        class="css-vtgn3q"
        data-backpack-ds-component="CardV2.Secondary"
      >
        <h3>
          Description
        </h3>
        <p>
          Product details
        </p>
      </div>
    </div>
    <div
      class="css-11j4h56"
      data-backpack-ds-component="CardV2.Footer"
    >
      <button
        type="button"
      >
        Add to cart
      </button>
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - elevated surface color 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceElevated"
  >
    <div
      class="css-rh38e6"
      data-backpack-ds-component="CardV2.Body"
    >
      Elevated background surface
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - minimal card (body only) 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-rh38e6"
      data-backpack-ds-component="CardV2.Body"
    >
      Minimal card with just body
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - outlined variant 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--outlined"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-m6xlmc"
      data-backpack-ds-component="CardV2.Header"
    >
      Outlined Card
    </div>
    <div
      class="css-rh38e6"
      data-backpack-ds-component="CardV2.Body"
    >
      Content with border instead of shadow
    </div>
  </div>
</div>
`;

exports[`BpkCardV2 Snapshots matches snapshot - split layout 1`] = `
<div>
  <div
    class="bpk-card-v2 bpk-card-v2--default"
    data-backpack-ds-component="CardV2"
    data-bg-color="surfaceDefault"
  >
    <div
      class="css-1poe0o9"
      data-backpack-ds-component="CardV2.Body"
    >
      <div
        class="css-u75zry"
        data-backpack-ds-component="CardV2.Primary"
      >
        Main content area (70%)
      </div>
      <div
        class="bpk-card-v2__divider"
        data-backpack-ds-component="CardV2.Divider"
      />
      <div
        class="css-izpqr4"
        data-backpack-ds-component="CardV2.Secondary"
      >
        Sidebar area (30%)
      </div>
    </div>
  </div>
</div>
`;
